FIX: bg alignment

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1515,6 +1515,7 @@ section.team.section-padding {
     padding: 80px 20px;
     background-size: cover;
     height: auto;
+    background-position: center;
   }
 
   .box-outline {
